Dep_BackEnd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: pnt-quiz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 2602070490fondrycendranata.azurecr.io/fondry/handy-popularnetworktechnology-tobedeployed-backend:latest
          ports:
            - containerPort: 3000
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: pnt-quiz
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
