Dep_FrontEnd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: pnt-quiz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 2602070490fondrycendranata.azurecr.io/fondry/handy-popularnetworktechnology-tobedeployed-frontend:latest
          ports:
            - containerPort: 80

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: pnt-quiz
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
